# HW2_C

./: CMakeLists.txt  README.md  main.c
search_lib/: CMakeLists.txt
search_lib/include/: search.h  show.h  utils.h
search_lib/regular_lib/: CMakeLists.txt  regular_show.c  regular_utils.c
search_lib/regular_lib/include/: search.h  utils.h
search_lib/shared_lib/: CMakeLists.txt  shared_search.c
search_lib/source/: search.c  show.c  utils.c
search_lib/static_lib/: CMakeLists.txt  static_search.c
test/: test — копия (2).txt  test — копия (3).txt  test1 — копия.txt  test2 — копия (2).txt  test3 — копия (2).txt
