cmake_minimum_required(VERSION 3.0.0)
project(search_lib)

add_subdirectory(regular_lib)
add_subdirectory(shared_lib)
add_subdirectory(static_lib)

set(SEARCH_LIB_LIBRARIES_REG ${SEARCH_LIB_LIBRARIES_REG} PARENT_SCOPE)
set(SEARCH_REG_LIB_INCLUDE_DIRS ${SEARCH_REG_LIB_INCLUDE_DIRS} PARENT_SCOPE)

set(SEARCH_LIB_LIBRARIES_SHARED ${SEARCH_LIB_LIBRARIES_SHARED} PARENT_SCOPE)
set(SEARCH_SHARED_LIB_INCLUDE_DIRS ${SEARCH_SHARED_LIB_INCLUDE_DIRS} PARENT_SCOPE)

set(SEARCH_LIB_LIBRARIES_STATIC ${SEARCH_LIB_LIBRARIES_STATIC} PARENT_SCOPE)
set(SEARCH_STATIC_LIB_INCLUDE_DIRS ${SEARCH_STATIC_LIB_INCLUDE_DIRS} PARENT_SCOPE)